[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-inspircd"
version = "1.0.0"
dependencies = [
    "jinja2",
    "mkdocs",
    "pyyaml",
]

[project.entry-points."mkdocs.plugins"]
inspircd = "mkdocs_inspircd:InspircdPlugin"

[tool.hatch.build.targets.wheel]
packages = ["mkdocs_inspircd"]

[tool.hatch.build.targets.wheel.shared-data]
"templates" = "templates"
