[metadata]
name = mkdocs_inspircd_modules
version = 0.0.1

[options]
packages = mkdocs_inspircd_modules
include_package_data = True
install_requires =
    jinja2
    mkdocs
    pyyaml

[options.entry_points]
mkdocs.plugins=
    inspircd_modules = mkdocs_inspircd_modules:InspircdModulesPlugin

[options.package_data]
* = templates/*.j2
